ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spielwiese-ingress
  annotations:
    #traefik.ingress.kubernetes.io/router.entrypoints: web
    #kubernetes.io/spec.ingressClassName: "traefik"
    #traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx
              port:
                number: 80
    - host: whoami.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-svc
                port:
                  number: 80

    - host: grafana.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: grafana
              port:
                number: 3000
    - host: keycloak.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: keycloak
              port:
                number: 8080             
    - host: jaeger.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jaeger
              port:
                number: 16686                                         
    - host: prometheus.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus
              port:
                number: 9090                                                       
    - host: artemis.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: activemq-artemis
              port:
                number: 8161
